feat (Category): create Category Module
